--- a/View/src/main/resources/pl/comp/view/primary.fxml
+++ b/View/src/main/resources/pl/comp/view/primary.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="620.0" prefWidth="860.0" style="-fx-background-color: #F2DA8A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
+<Pane fx:id="root" prefHeight="620.0" prefWidth="860.0" style="-fx-background-color: #F2DA8A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
    <children>
       <VBox alignment="CENTER" prefHeight="620.0" prefWidth="860.0" spacing="20.0" stylesheets="@primaryScreen.css">
          <padding>
@@ -21,13 +21,13 @@
          <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" style="-fx-pref-width: 150; -fx-background-color: #FFFFFF;" stylesheets="@primaryScreen.css">
                  <items>
                     <FXCollections fx:factory="observableArrayList">
-                       <String fx:value="Easy" />
-                       <String fx:value="Medium" />
-                       <String fx:value="Hard" />
+                       <String fx:value="%easyLevelLabel" />
+                       <String fx:value="%mediumLevelLabel" />
+                       <String fx:value="%hardLevelLabel" />
                     </FXCollections>
                  </items>
          </ChoiceBox>
-         <Button fx:id="primaryButton" onAction="#switchToSecondary" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000;" text="Start" />
+         <Button fx:id="primaryButton" onAction="#switchToSecondary" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000;" text="%startButtonLabel" />
          <RadioButton fx:id="engButton" mnemonicParsing="false" onAction="#loadEnglish" prefHeight="18.0" prefWidth="49.0" selected="true" text="ENG">
             <font>
                <Font name="Comic Sans MS Bold" size="12.0" />
