--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -13,9 +13,9 @@
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
         </padding>
-        <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="Back" />
+        <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="%backButtonLabel" />
     </VBox>
-    <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="25.0" prefWidth="102.0" text="Reset" />
+    <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="25.0" prefWidth="102.0" text="%resetButtonLabel" />
     <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0" prefWidth="688.0" style="-fx-border-color: #000000;" styleClass="sudokuBoardGrid" stylesheets="@secondary.css">
       <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
@@ -40,6 +40,6 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-   <Button fx:id="loadButton" layoutX="738.0" layoutY="267.0" mnemonicParsing="false" onAction="#load" prefHeight="28.0" prefWidth="102.0" text="Load" />
-   <Button fx:id="saveButton" layoutX="737.0" layoutY="310.0" mnemonicParsing="false" onAction="#save" prefHeight="28.0" prefWidth="102.0" text="Save" />
+   <Button fx:id="loadButton" layoutX="738.0" layoutY="267.0" mnemonicParsing="false" onAction="#load" prefHeight="28.0" prefWidth="102.0" text="%loadButtonLabel" />
+   <Button fx:id="saveButton" layoutX="737.0" layoutY="310.0" mnemonicParsing="false" onAction="#save" prefHeight="28.0" prefWidth="102.0" text="%saveButtonLabel" />
 </Pane>
