--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -2,20 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
+<Pane fx:id="root" prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
     <VBox alignment="CENTER" layoutX="718.0" layoutY="539.0" spacing="20.0">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
         </padding>
-        <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="%backButtonLabel" />
+        <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="109.0" text="%backButtonLabel" />
     </VBox>
-    <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="25.0" prefWidth="102.0" text="%resetButtonLabel" />
+    <Button layoutX="735.0" layoutY="33.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="25.0" prefWidth="108.0" text="%resetButtonLabel" />
     <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0" prefWidth="688.0" style="-fx-border-color: #000000;" styleClass="sudokuBoardGrid" stylesheets="@secondary.css">
       <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
@@ -40,6 +42,13 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
-   <Button fx:id="loadButton" layoutX="738.0" layoutY="267.0" mnemonicParsing="false" onAction="#load" prefHeight="28.0" prefWidth="102.0" text="%loadButtonLabel" />
-   <Button fx:id="saveButton" layoutX="737.0" layoutY="310.0" mnemonicParsing="false" onAction="#save" prefHeight="28.0" prefWidth="102.0" text="%saveButtonLabel" />
+   <Button fx:id="loadButton" layoutX="735.0" layoutY="379.0" mnemonicParsing="false" onAction="#load" prefHeight="28.0" prefWidth="108.0" text="%loadButtonLabel" />
+   <Button fx:id="saveButton" layoutX="735.0" layoutY="424.0" mnemonicParsing="false" onAction="#save" prefHeight="28.0" prefWidth="108.0" text="%saveButtonLabel" />
+   <Button fx:id="loadBaseButton" layoutX="735.0" layoutY="175.0" mnemonicParsing="false" onAction="#loadBaseButton" prefHeight="25.0" prefWidth="108.0" text="%loadBaseButtonLabel" />
+   <Button fx:id="saveBaseButton" layoutX="735.0" layoutY="214.0" mnemonicParsing="false" onAction="#saveBaseButton" prefHeight="25.0" prefWidth="108.0" text="%saveBaseButtonLabel" />
+   <ImageView fitHeight="80.0" fitWidth="116.0" layoutX="731.0" layoutY="268.0">
+      <image>
+         <Image url="@crying_cat.png" />
+      </image>
+   </ImageView>
 </Pane>
